<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ise308.orhan_berk_mysecrets.activity.MainActivity">


    <item
        android:id="@+id/addNewSecret"
        android:icon="@drawable/button_secret_add"
        android:orderInCategory="100"
        android:title="@string/mAdd"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchSecret"
        android:orderInCategory="100"
        android:title="@string/mSearch"
        android:icon="@drawable/button_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/deleteAllSecrets"
        android:icon="@drawable/delete_all_button"
        android:orderInCategory="100"
        android:title="@string/mDeleteAll"
        app:showAsAction="always" />

    <item
        android:id="@+id/openSettings"
        android:icon="@drawable/button_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>