<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logoHeight"
        android:layout_margin="@dimen/logoMargin"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/appbeta_logo" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gudea_bold"
        android:text="@string/createPass"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/pW"
        android:layout_width="match_parent"
        android:layout_height="@dimen/passPage_pW_Height"
        android:layout_marginStart="@dimen/passPage_pW_marginStart"
        android:layout_marginTop="@dimen/passPage_pW_marginTop"
        android:layout_marginEnd="@dimen/passPage_pW_marginEnd"
        android:layout_marginBottom="@dimen/passPage_pW_marginBottom"
        android:background="@drawable/text_stroke"
        android:ems="10"
        android:fontFamily="@font/gudea"
        android:hint="@string/newPass"
        android:inputType="textPassword"
        android:paddingStart="@dimen/passPage_pW_paddingStart"
        android:paddingRight="@dimen/passPage_pW_paddingEnd"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/savePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/saveBTN_margin"
        android:layout_marginStart="@dimen/saveBTN_marginStart"
        android:layout_marginEnd="@dimen/saveBTN_marginEnd"
        android:text="@string/saveBtn" />

</LinearLayout>